# pkm-cli-tool

./: .coverage  .gitignore  LICENSE.txt  README.md  TESTING.md  USER_STORIES.md  context.json  environment.yaml  environment.yml  exportCondaEnv.sh  main.py  setup.cfg  setup.py  uploadToTestPyPi.sh
.github/workflows/: python_package_flow.yml
commands/: build.py  create.py  deploy.py  read.py
my_notes/: daily.2022.10.23.md  daily.2023.01.10.md
pkm-cli/: TODO.md  __init__.py  main.py  utils.py
pkm-cli/commands/: create.py  read.py
pkm-cli/generators/: file.py  fm.py  fm_test.py  notes.py
pkm-cli/my_notes/: area.test.note.2.md  daily.2022.10.25.md  daily.2023.01.08.md  daily.2023.01.09.md  project.test.note.2.md  project.test.note.md
pkm-cli/pkm_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pkm-cli/utils/: __init__.py
src/paperclip/: __init__.py  main.py
src/paperclip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/paperclip/_examples/: gitClone.py
src/paperclip/commands/: create.py  init.py  read.py
src/paperclip/generators/: file.py  fm.py  path.py  store.py
src/pkmcli/: main.py
src/pkmcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pkmcli/commands/: create.py  echo_store.py  (+2 more)
tests/: commands_create_test.py  commands_init_test.py  commands_read_test.py  commands_store_test.py  fm_test.py  generators_file_test.py  generators_fm_test.py  generators_notes_test.py  generators_path_test.py  generators_store_test.py
tests/samples/: context.json  contextError.json  contextSamples.json  contextValid.json
utils/: frontmatter.py  utils.py
(+12 files in other folders)
