[metadata]
name = pkmcli
version = 0.0.1

[options]
packages =
    pkmcli
package_dir =
    =src
install_requires =
    click
    frontmatter
    pyyaml
    ulid-py
python_requires = >=3.7
include_package_data = True
zip_safe = no
# packages = find:

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=src  # . by default
include=*  # * by default

[options.entry_points]
console_scripts =
    pkmcli = pkmcli.main:cli
