[metadata]
name = paperclip
version = 0.0.1
author = 'Alan Ionita'
description = CLI tool for managin a large collection of markdown notes
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/alanionita/pkm-cli-tool/issues
    repository = https://github.com/alanionita/pkm-cli-tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    paperclip
package_dir =
    =src
install_requires =
    click
    ulid-py
    pytest
    pyyaml
python_requires = >=3.7
include_package_data = True
zip_safe = no
# packages = find:

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=src  # . by default
include=*  # * by default

[options.entry_points]
console_scripts =
    paperclip = paperclip.main:cli
